Fix table header alignment and tidy up CSS. - Column header alignment is determined globally for each column. - Column headers are always aligned (left or right) to match the content. - Slightly smaller cell padding, and fix controls positioning. - Click header names to sort, and click empty header space to reset.
PiperOrigin-RevId: 401275718

--- a/lit_nlp/client/elements/table.css
+++ b/lit_nlp/client/elements/table.css
@@ -1,6 +1,7 @@
 :host {
   --table-header-height: 40px;
   --table-footer-height: 26px;
+  --table-cell-padding: 4px 8px;
 }
 
 .holder {
@@ -49,15 +50,14 @@
 }
 
 .column-header.right-align {
-  flex-direction: row-reverse;
-  padding-right: 8px;
+  justify-content: flex-end;
 }
 
 .header-holder {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 5px 10px;
+  padding: var(--table-cell-padding);
 }
 
 .header-text {
@@ -69,9 +69,9 @@
 }
 
 .arrow-container {
-  width: 20px;
+  width: 16px;
   height: 20px;
-  right: 2px;
+  right: 8px;
   position: relative;
   user-select: none;
 }
@@ -83,11 +83,11 @@
 }
 
 .arrow.up {
-  top: -5px;
+  top: -6px;
 }
 
 .arrow.down {
-  top: 3px;
+  top: 2px;
 }
 
 .arrow.active {
@@ -102,6 +102,7 @@
   width: 20px;
   height: 20px;
   user-select: none;
+  padding-left: 4px;
 }
 
 .menu-button {
@@ -158,7 +159,6 @@ tbody tr.reference-selected {
 tbody td {
   vertical-align: middle;
   min-width: 80px;
-  padding: 5px 10px;
   box-sizing: border-box;
 }
 
@@ -166,14 +166,21 @@ tbody td {
   margin-left: 20px;
 }
 
+.cell-holder {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: var(--table-cell-padding);
+}
+
+.cell-holder.right-align {
+  justify-content: flex-end;
+}
+
 .text-cell {
   max-height: 150px;
   overflow: auto;
   white-space: pre-wrap;
-}
-
-.numeric {
-  text-align: right;
 }
 
 /* TODO(lit-dev): Make the table image width configurable. */
